--- a/src/CS50G/Shared/NavMenu.razor
+++ b/src/CS50G/Shared/NavMenu.razor
@@ -17,6 +17,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Pong
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="FiftyBird">
+                <span class="oi oi-plus" aria-hidden="true"></span> FiftyBird
+            </NavLink>
+        </li>
     </ul>
 </div>
 
