--- a/src/CS50G/Shared/NavMenu.razor
+++ b/src/CS50G/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Breakout
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Match3">
+                <span class="oi oi-plus" aria-hidden="true"></span> Match 3
+            </NavLink>
+        </li>
     </ul>
 </div>
 
